# pg-manager

./: package-lock.json  package.json  vite.config.js
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20251007211525_initialization.sql
src-tauri/src/: lib.rs  main.rs  password.rs
src-tauri/src/commands/: app_user_logs.rs  app_users.rs  bookmarks.rs  connection_folders.rs  connection_tags.rs  connections.rs  diagrams.rs  mod.rs  pg_queries.rs  pinned_queries.rs  prelude.rs  query_history.rs  tags.rs
src-tauri/src/models/: app_user_logs.rs  app_users.rs  bookmarks.rs  connection_folders.rs  connection_tags.rs  connections.rs  diagrams.rs  mod.rs  pinned_queries.rs  query_history.rs  tags.rs
src/lib/components/: ContextMenu.svelte  DBTable.svelte  Login.svelte  QueryEditor.svelte  ResultsTable.svelte  Sidebar.svelte
src/lib/components/diagram/: ERDiagram.svelte  TableNode.svelte
src/lib/components/icons/: AddIcon.svelte  DatabaseIcon.svelte  DeleteIcon.svelte  EditIcon.svelte  FolderIcon.svelte  LogoutIcon.svelte  SchemaIcon.svelte  SearchIcon.svelte  ServerIcon.svelte  SettingsIcon.svelte  TableIcon.svelte  ViewIcon.svelte
src/lib/components/modals/: ConnectionFormModal.svelte  DashboardModal.svelte  DeleteConnectionModal.svelte  EditPinnedQueryModal.svelte  FolderModal.svelte  RenameDiagramModal.svelte  SaveDiagramModal.svelte  SaveQueryModal.svelte  TagsManagerModal.svelte  UserManagementModal.svelte
src/lib/stores/: auth.svelte.ts  bookmarks.ts  connections.ts  diagrams.ts  folders.ts  history.ts  pgSchema.ts  pinned.ts  pinnedQueries.ts  queryHistory.ts  tabs.svelte.ts  tags.ts
src/lib/utils/: highlight.ts  sqlHelpers.ts
src/lib/values/: index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/app-users/: +page.svelte
src/routes/connections/: +page.svelte
src/routes/connections-folders/: +page.svelte
src/routes/query-editor/: +page.svelte
