[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "sqlite",
    "tls-native-tls",
    "migrate",
    "chrono",
] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
magic-crypt = "4.0.1"
chrono = { version = "0.4.42", features = ["serde"] }
bcrypt = "0.17.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
